[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build-core>=0.7.0, <1",
    "numpy>=2.0, <3", # NumPy 2 ABI target; Numpy 1.x is EOL since Sept. 2025
    "cmake>=3.21",
    "ninja",  # Explicit: auto-injection unreliable in manylinux (broken system ninja symlinked to make)
    "pybind11>=2.12.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "xllim"
version = "2.0.9" # Or your desired Python package version
dependencies = [
    "numpy>=2.0, <3", 
    "h5py>=3.8, <4",
]
authors = [
  { name="Luc Meyer", email="luc.meyer@inria.fr" },
]

maintainers = [
    {name = "xLLiM Team", email="xllim-contact@inria.fr"},
]

description = "xLLiM is a C++ with Python bindings implementation of Gaussian Locally-Linear Mapping."
readme = "README.md"
requires-python = ">=3.10" # We're building only for 3.11 & 3.12 (NumPy 2 and CARMA support req.), but leaving free for users to compile with non-supported versions
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "CeCILL-C"
license-files = ["LICENCE.txt"]

[project.urls]
Repository = "https://github.com/xllim-tools/xllim"
Documentation = "https://xllim-tools.github.io/xllim/"
Issues = "https://github.com/xllim-tools/xllim/issues"

[project.scripts]
xllim_cli = "xllim.cli:main"

[tool.scikit-build.sdist]
include = ["tests/**/*"]

[tool.scikit-build]
cmake.source-dir = "." # Root CMakeLists.txt
# Explicitly passing CMAKE_BUILD_TYPE as a cmake arg ensures Release mode on all platforms,
# including Windows conda-forge where conda-build may inject debug CXXFLAGS
# that override scikit-build-core's cmake.build-type setting.
cmake.args = ["-G", "Ninja", "-DCMAKE_BUILD_TYPE=Release"]
cmake.build-type = "Release"
wheel.packages = ["xllim"]
